--- a/styles/style.css
+++ b/styles/style.css
@@ -13,11 +13,11 @@ body {
 }
 
 .banner{
-    display: block flex;
+    display: flex;
     justify-content: space-between;
     margin: 0 0px 100px 0px;
     gap: 30px;
-    padding: 0px 70px 56px 70px;
+    padding: 70px 70px 56px 70px;
     box-sizing: border-box; 
     border-radius: 24px;
     background: rgb(198, 228, 214);
@@ -53,4 +53,85 @@ body {
     padding-right: 100px;
     
 }
+.description{
+    color: rgba(14, 14, 14, 0.7);
+    font-size: 12px;
+    font-weight: 400;
+}
+.vision-div{
+    display: flex;
+    gap: 10;
+    margin: 10px auto;
+    margin-top: 20px;
+    
+}
+.one{
+    margin-right: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background: rgba(84, 144, 245, 0.2);
+}
+.two{
+    margin-right: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background: rgb(198, 228, 214);
+}
+.three{
+    margin-right: 10px;
+    padding: 20px;
+    box-sizing: border-box;
+    border-radius: 10px;
+    background: rgb(247, 235, 207);
+}
+.vision-btn1{
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: 5px;
+    background: rgb(84, 144, 245);
+    margin: 16px 0px;
+    padding: 7px 12px 7px 12px;
+    border: none;
+}
+.vision-btn2{ 
+    background: rgb(9, 161, 92);
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: 5px;
+    color: rgb(255, 255, 255);
+    margin: 16px 0px;
+    padding: 7px 12px 7px 12px;
+    border: none;
+}
+.vision-btn3{
+    color: rgb(255, 255, 255);
+    font-size: 12px;
+    font-weight: 600;
+    border-radius: 5px;
+    background: rgb(255, 194, 57);
+    margin: 16px 0px;
+    padding: 7px 12px 7px 12px;
+    border: none;
+
+}
+
+.head{
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.lorem{
+    
+    margin: 10px auto;
+    box-sizing: border-box;
+    border: 1px solid rgba(14, 14, 14, 0.15);
+    border-radius: 10px;
+    background: rgb(255, 255, 255);
+    padding: 10px;
+}
+
 
