--- a/styles/style.css
+++ b/styles/style.css
@@ -133,5 +133,31 @@ body {
     background: rgb(255, 255, 255);
     padding: 10px;
 }
+.news{
+    margin: 10px auto;
+    box-sizing: border-box;
+}
+.sat-head{
+    color: rgba(14, 14, 14, 0.8);
+    font-size: 22px;
+    font-weight: 700;
+}
+.date{
+    color: rgba(14, 14, 14, 0.7);  
+    font-size: 10px;
+    font-weight: 400;
+}
+.sat1{
+    display: flex;
+    justify-content: space-between;
+    gap: 300px;
+    margin: 10px ;
+    border-radius: 24px;
+    background: rgba(231, 212, 212, 0.774);
+    padding: 20px;
+    box-sizing: border-box;
+    
+}
+
 
 
